# wasm-image-processor

./: Cargo.toml  README.md  prep-demo.sh
.github/workflows/: main.yml  static.yml
demo/: index.html  pwa.html  pwa_image_generator.js  pwa_image_generator_bg.wasm  wasm_image_processor.js  wasm_image_processor_bg.wasm
src/: grayscale.rs  lib.rs  resize.rs  resize_square.rs
src/chaining/: mod.rs
src/color_filters/: blur.rs  brighten.rs  contrast.rs  fast_blur.rs  grayscale.rs  hue_rotate.rs  invert.rs  mod.rs
src/transformation/: crop.rs  mod.rs  resize.rs  resize_square.rs  thumbnail.rs
src/utils/: mod.rs  read_image.rs
